--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -49,50 +49,50 @@
         <item name="android:textSize">18sp</item>
     </style>
 
-    <!--  H4  -->
-    <style name="H4_Bold">
+    <!--  Body1  -->
+    <style name="Body1_Bold">
         <item name="android:fontFamily">@font/pretendard_bold</item>
         <item name="android:textSize">16sp</item>
     </style>
 
-    <style name="H4_Semibold">
+    <style name="Body1_Semibold">
         <item name="android:fontFamily">@font/pretendard_semibold</item>
         <item name="android:textSize">16sp</item>
     </style>
 
-    <style name="H4_Medium">
+    <style name="Body1_Medium">
         <item name="android:fontFamily">@font/pretendard_medium</item>
         <item name="android:textSize">16sp</item>
     </style>
 
-    <!--  H5  -->
-    <style name="H5_Bold">
+    <!--  Body2  -->
+    <style name="Body2_Bold">
         <item name="android:fontFamily">@font/pretendard_bold</item>
         <item name="android:textSize">14sp</item>
     </style>
 
-    <style name="H5_Semibold">
+    <style name="Body2_Semibold">
         <item name="android:fontFamily">@font/pretendard_semibold</item>
         <item name="android:textSize">14sp</item>
     </style>
 
-    <style name="H5_Medium">
+    <style name="Body2_Medium">
         <item name="android:fontFamily">@font/pretendard_medium</item>
         <item name="android:textSize">14sp</item>
     </style>
 
-    <!--  H6  -->
-    <style name="H6_Bold">
+    <!--  Caption  -->
+    <style name="Caption_Bold">
         <item name="android:fontFamily">@font/pretendard_bold</item>
         <item name="android:textSize">12sp</item>
     </style>
 
-    <style name="H6_Semibold">
+    <style name="Caption_Semibold">
         <item name="android:fontFamily">@font/pretendard_semibold</item>
         <item name="android:textSize">12sp</item>
     </style>
 
-    <style name="H6_Medium">
+    <style name="Caption_Medium">
         <item name="android:fontFamily">@font/pretendard_medium</item>
         <item name="android:textSize">12sp</item>
     </style>
