[ADD] Mypage UI 추가

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -110,4 +110,9 @@
         <item name="chipStrokeColor">@color/bg_home_chip</item>
         <item name="ensureMinTouchTargetSize">false</item>
     </style>
+
+    <!--  Divider Style  -->
+    <style name="Divider">
+        <item name="android:background">@color/gray_50</item>
+    </style>
 </resources>
