--- a/app/src/main/res/layout/fragment_mypage.xml
+++ b/app/src/main/res/layout/fragment_mypage.xml
@@ -58,15 +58,18 @@
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="20dp"
             android:layout_marginTop="16dp"
+            android:orientation="horizontal"
+            app:layoutManager="com.google.android.flexbox.FlexboxLayoutManager"
             app:layout_constraintTop_toBottomOf="@id/mypage_my_keyword"
-            tools:itemCount="4" />
+            tools:itemCount="10"
+            tools:listitem="@layout/item_mypage_keyword" />
 
         <View
             android:id="@+id/mypage_divider"
             style="@style/Divider"
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:layout_marginTop="40dp"
+            android:layout_marginTop="32dp"
             app:layout_constraintTop_toBottomOf="@id/mypage_my_keyword_list" />
 
         <TextView
