--- a/app/src/main/res/layout/fragment_mypage_edit.xml
+++ b/app/src/main/res/layout/fragment_mypage_edit.xml
@@ -24,7 +24,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:text="편집하기"
+                android:text="@string/mypage_edit_title"
                 android:textColor="@color/gray_90" />
 
             <ImageView
@@ -42,7 +42,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
             android:layout_marginTop="24dp"
-            android:text="플레이리스트 취향을 선택해 주세요."
+            android:text="@string/mypage_edit_subtitle"
             android:textColor="@color/gray_80"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/mypage_edit_toolbar" />
@@ -54,7 +54,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
             android:layout_marginTop="4dp"
-            android:text="1개 이상 15개 이하의 키워드를 선택할 수 있어요."
+            android:text="@string/mypage_edit_desc"
             android:textColor="@color/gray_60"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/mypage_edit_subtitle" />
@@ -103,7 +103,7 @@
             android:layout_marginHorizontal="20dp"
             android:layout_marginBottom="56dp"
             android:background="@drawable/primary_button"
-            android:text="시작하기"
+            android:text="@string/mypage_edit_start_btn"
             android:textColor="@color/white"
             app:layout_constraintBottom_toBottomOf="parent" />
 
