--- a/app/src/main/res/layout/fragment_keep_detail.xml
+++ b/app/src/main/res/layout/fragment_keep_detail.xml
@@ -7,6 +7,10 @@
         <variable
             name="viewModel"
             type="com.cocaine.myply.feature.ui.keep.KeepDetailViewModel" />
+
+        <variable
+            name="view"
+            type="com.cocaine.myply.feature.ui.keep.KeepDetailFragment" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -25,6 +29,7 @@
                 android:layout_width="24dp"
                 android:layout_height="24dp"
                 android:src="@drawable/ic_back"
+                android:onClick="@{view::goBack}"
                 android:background="@android:color/transparent" />
 
             <TextView
