--- a/app/src/main/res/layout/fragment_keep_detail.xml
+++ b/app/src/main/res/layout/fragment_keep_detail.xml
@@ -75,7 +75,7 @@
             android:paddingBottom="16dp"
             android:layout_marginTop="16dp"
             android:layout_marginStart="20dp"
-            android:enabled="@{viewModel.isEditable()}"
+            android:enabled="false"
             android:gravity="start"
             android:layout_marginEnd="20dp"
             android:maxLength="200"
@@ -99,7 +99,8 @@
             android:id="@+id/keep_detail_edit_btn"
             android:layout_width="24dp"
             android:layout_height="24dp"
-            android:src="@{viewModel.isEditable()? @drawable/ic_edit_active :@drawable/ic_edit_inactive}"
+            android:onClick="@{view::moveToKeepWrite}"
+            android:src="@{viewModel.isWrited > 0 ? @drawable/ic_edit_active :@drawable/ic_edit_inactive}"
             android:layout_marginEnd="16dp"
             android:background="@android:color/transparent"
             app:layout_constraintTop_toTopOf="@id/keep_detail_memo_title"
