--- a/app/src/main/res/layout/fragment_keep_detail.xml
+++ b/app/src/main/res/layout/fragment_keep_detail.xml
@@ -29,7 +29,7 @@
                 android:layout_width="24dp"
                 android:layout_height="24dp"
                 android:src="@drawable/ic_back"
-                android:onClick="@{view::goBack}"
+                android:onClick="@{() -> view.goBack()}"
                 android:background="@android:color/transparent" />
 
             <TextView
@@ -100,7 +100,7 @@
             android:layout_width="24dp"
             android:layout_height="24dp"
             android:onClick="@{view::moveToKeepWrite}"
-            android:src="@{viewModel.isWrited > 0 ? @drawable/ic_edit_active :@drawable/ic_edit_inactive}"
+            android:src="@{viewModel.isWrited ? @drawable/ic_edit_active :@drawable/ic_edit_inactive}"
             android:layout_marginEnd="16dp"
             android:background="@android:color/transparent"
             app:layout_constraintTop_toTopOf="@id/keep_detail_memo_title"
