[MOD] Divider alpha 0.3으로 설정

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -114,5 +114,6 @@
     <!--  Divider Style  -->
     <style name="Divider">
         <item name="android:background">@color/gray_50</item>
+        <item name="android:alpha">0.3</item>
     </style>
 </resources>
