--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -12,6 +12,7 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+        <item name="bottomSheetDialogTheme">@style/MyPly.BottomSheet</item>
     </style>
 
     <style name="Theme.MyPly.BottomNavigation" parent="Widget.MaterialComponents.BottomNavigationView.Colored">
