--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -24,7 +24,9 @@
             <ImageView
                 android:id="@+id/home_logo"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_logo"
+                app:tint="@color/primary_green_basic" />
         </com.google.android.material.appbar.MaterialToolbar>
 
         <com.google.android.material.chip.ChipGroup
