--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -33,19 +33,31 @@
 
         </com.google.android.material.appbar.MaterialToolbar>
 
-        <EditText
-            android:id="@+id/search_edit_text"
+        <com.google.android.material.textfield.TextInputLayout
+            style="@style/Widget.Design.TextInputLayout"
+            android:id="@+id/search_edit_layout"
             android:layout_width="match_parent"
-            android:layout_height="56dp"
+            android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
             android:layout_marginTop="24dp"
             android:layout_marginEnd="20dp"
-            android:background="@color/white"
-            android:drawableLeft="@drawable/ic_search_activation"
-            android:paddingLeft="15dp"
-            android:lines="1"
             app:layout_constraintStart_toStartOf="@id/search_title"
-            app:layout_constraintTop_toBottomOf="@id/search_title" />
+            app:layout_constraintTop_toBottomOf="@id/search_title"
+            app:startIconDrawable="@drawable/ic_search_activation"
+            app:endIconMode="clear_text"
+            app:hintEnabled="false"
+            app:shapeAppearance="?attr/shapeAppearanceLargeComponent">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/search_edit_txt"
+                android:layout_width="match_parent"
+                android:layout_height="56dp"
+                android:maxLines="1"
+                android:background="@color/white"
+                android:hint="@string/search_placeholder"/>
+
+        </com.google.android.material.textfield.TextInputLayout>
+
 
         <TextView
             android:id="@+id/search_subtitle"
@@ -56,8 +68,8 @@
             android:layout_marginTop="24dp"
             android:layout_marginEnd="20dp"
             android:text="@string/search_subtitle"
-            app:layout_constraintStart_toStartOf="@id/search_edit_text"
-            app:layout_constraintTop_toBottomOf="@id/search_edit_text" />
+            app:layout_constraintStart_toStartOf="@id/search_edit_layout"
+            app:layout_constraintTop_toBottomOf="@id/search_edit_layout" />
 
         <com.google.android.material.chip.ChipGroup
             android:id="@+id/search_recomend"
