--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -53,6 +53,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="56dp"
                 android:maxLines="1"
+                android:inputType="text"
                 android:background="@color/white"
                 android:hint="@string/search_placeholder"/>
 
