--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -33,19 +33,32 @@
 
         </com.google.android.material.appbar.MaterialToolbar>
 
-        <EditText
-            android:id="@+id/search_edit_text"
+        <com.google.android.material.textfield.TextInputLayout
+            style="@style/Widget.Design.TextInputLayout"
+            android:id="@+id/search_edit_layout"
             android:layout_width="match_parent"
-            android:layout_height="56dp"
+            android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
             android:layout_marginTop="24dp"
             android:layout_marginEnd="20dp"
-            android:background="@color/white"
-            android:drawableLeft="@drawable/ic_search_activation"
-            android:paddingLeft="15dp"
-            android:lines="1"
             app:layout_constraintStart_toStartOf="@id/search_title"
-            app:layout_constraintTop_toBottomOf="@id/search_title" />
+            app:layout_constraintTop_toBottomOf="@id/search_title"
+            app:startIconDrawable="@drawable/ic_search_activation"
+            app:endIconMode="clear_text"
+            app:hintEnabled="false"
+            app:shapeAppearance="?attr/shapeAppearanceLargeComponent">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/search_edit_txt"
+                android:layout_width="match_parent"
+                android:layout_height="56dp"
+                android:maxLines="1"
+                android:inputType="text"
+                android:background="@color/white"
+                android:hint="@string/search_placeholder"/>
+
+        </com.google.android.material.textfield.TextInputLayout>
+
 
         <TextView
             android:id="@+id/search_subtitle"
@@ -56,8 +69,8 @@
             android:layout_marginTop="24dp"
             android:layout_marginEnd="20dp"
             android:text="@string/search_subtitle"
-            app:layout_constraintStart_toStartOf="@id/search_edit_text"
-            app:layout_constraintTop_toBottomOf="@id/search_edit_text" />
+            app:layout_constraintStart_toStartOf="@id/search_edit_layout"
+            app:layout_constraintTop_toBottomOf="@id/search_edit_layout" />
 
         <com.google.android.material.chip.ChipGroup
             android:id="@+id/search_recomend"
@@ -69,14 +82,36 @@
             app:layout_constraintStart_toStartOf="@id/search_subtitle"
             app:layout_constraintTop_toBottomOf="@id/search_subtitle" />
 
+        <ImageView
+            android:id="@+id/search_no_result_img"
+            android:layout_width="138dp"
+            android:layout_height="142dp"
+            android:src="@drawable/ic_no_result"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/search_edit_layout"/>
+
+        <TextView
+            android:id="@+id/search_no_result_txt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="32dp"
+            android:textAlignment="center"
+            android:text="@{@string/search_no_result(``)}"
+            app:layout_constraintTop_toBottomOf="@id/search_no_result_img"
+            app:layout_constraintStart_toStartOf="@id/search_no_result_img"
+            app:layout_constraintEnd_toEndOf="@id/search_no_result_img"/>
+
         <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/search_result_list"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_marginTop="24dp"
             android:layout_marginStart="20dp"
             android:layout_marginEnd="20dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/search_edit_text"
+            app:layout_constraintTop_toBottomOf="@id/search_edit_layout"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             tools:listitem="@layout/item_playlist"/>
 
