--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -13,6 +13,12 @@
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
         <item name="bottomSheetDialogTheme">@style/MyPly.BottomSheet</item>
+        <item name="android:background">@android:color/transparent</item>
+    </style>
+
+    <style name="Theme.MyPly.Splash" parent="Theme.MyPly">
+        <item name="android:background">@drawable/ic_splash</item>
+        <item name="android:windowSplashScreenBackground" tools:targetApi="s">@color/primary_green_basic</item>
     </style>
 
     <style name="Theme.MyPly.BottomNavigation" parent="Widget.MaterialComponents.BottomNavigationView.Colored">
